media-server: Store photo names without extensions

https://bugzilla.gnome.org/show_bug.cgi?id=741162